# verder-helpen

./: Cargo.toml  LICENSE  README.md
.github/workflows/: lint.yaml  update.yaml
auth-digid/: README.md  go.mod  go.sum  jwt_test.go
auth-digid/locale/: en.json  nl.json
auth-digid/templates/: confirm.html
auth-digid/test-jwt/: Cargo.toml
auth-digid/test-jwt/src/: main.rs
auth-test/: Cargo.toml  config.sample.toml
auth-test/src/: config.rs  main.rs
auth-test/templates/: confirm.html
comm-common/: Cargo.toml  README.md  config.sample.toml  schema.sql
comm-common/src/: auth.rs  config.rs  credentials.rs  error.rs  jwt.rs  lib.rs  main.rs  session.rs  templates.rs  types.rs
comm-common/src/templates/: attribute.css  credentials.html  login.html  macros.html  none_in_room.html
comm-test/: Cargo.toml  config.sample.toml
comm-test/src/: config.rs  main.rs
core/: Cargo.toml  config.toml
core/src/: config.rs  error.rs  main.rs  options.rs  start.rs
core/src/methods/: auth.rs
verder-helpen-jwt/: Cargo.toml
verder-helpen-jwt/src/: config.rs  error.rs  lib.rs
verder-helpen-proto/: Cargo.toml  README.md
verder-helpen-proto/src/: authplugin.rs  authresult.rs  common.rs  commplugin.rs
