[workspace]
members = [
    "auth-test",
    "comm-common",
    "comm-test",
    "core",
    "verder-helpen-proto",
    "verder-helpen-jwt",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.76"

[workspace.dependencies]
accept-language = "3.1.0"
askama = "0.12.1"
base64 = "0.13.1"
figment = "0.10.14"
httpmock = "0.7.0"
josekit = "0.8.5"
lazy_static = "1.4.0"
log = "0.4.20"
rand = "0.8.5"
reqwest = "0.11.24"
rocket = "0.5.0"
rocket_sync_db_pools = "0.1.0"
serde = "1.0.196"
serde_json = "1.0.113"
serde_yaml = "0.9.31"
serial_test = "3.0.0"
strum = "0.26.1"
strum_macros = "0.26.1"
tera = "1.19.1"
thiserror = "1.0.57"
tokio-test = "0.4.3"
unic-langid = "0.9.4"
rocket_oauth2 = "0.5.0"

[patch.crates-io]
rocket_oauth2 = { git = "https://github.com/arjentz/rocket_oauth2.git", rev = "44d596d4f219816b287f525b1bc8260cb0229262" }
