[package]
name = "verder-helpen-comm-test"
edition.workspace = true
rust-version.workspace = true

[dependencies]
josekit.workspace = true
rocket = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true

verder-helpen-jwt.path = "../verder-helpen-jwt"
verder-helpen-proto.path = "../verder-helpen-proto"
