[package]
name = "verder-helpen-jwt"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
josekit.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

verder-helpen-proto.path = "../verder-helpen-proto"

[dev-dependencies]
serde_yaml.workspace = true
